--- a/src/mdtutils/CMakeLists.txt
+++ b/src/mdtutils/CMakeLists.txt
@@ -1,17 +1,17 @@
 # Project file for Multi Diag Tools
 # * Part: mdtutils *
-# * Directory: mdutils *
+# * Directory: mdtutils *
 
 # Project
 project (multidiagtools)
 
-# Liste des fichiers d'entêtes Qt (entêtes contenant Q_OBJECT)
+# List of Qt headers (headers that contains Q_OBJECT macro)
 set (HEADER_FILES 
           # mdtError
           mdtErrorOut.h
     )
 
-# Liste des fichiers sources
+# List of source files
 set (SOURCES_FILES 
           mdtAlgorithms.cpp
           mdtBuffer.cpp
@@ -31,14 +31,17 @@ set (SOURCES_FILES
           mdtErrorOut.cpp
           # File
           mdtCsvFile.cpp
+          # UIC number
+          mdtUicNumber.cpp
+          mdtUicNumberItem.cpp
     )
 
-# Liste des fichiers ui
+# List of .ui files
 set (FORM_FILES
 
     )
 
-# Liste des fichiers rcc (ressources)
+# List of rcc files (Qt ressources)
 set (RESOURCE_FILES
 
     )
@@ -53,27 +56,31 @@ if(UNIX)
   )
 endif(UNIX)
 
-# Fichiers à traiter par le compilateur moc
+# Files on witch moc compiler must work
 QT4_WRAP_CPP (MOC_HEADERS ${HEADER_FILES})
 
-# Fichiers à traiter par le compilateur uic
+# Files on witch uic compiler must work
 QT4_WRAP_UI (UIC_HEADERS ${FORM_FILES})
 
-# Fichiers à traiter par le compilateur rcc
+# Files on witch rcc compiler must work
 QT4_ADD_RESOURCES (RCC_FILES ${RESOURCE_FILES})
 
-# Librairie du projet
+# Output library
 add_library (mdtutils SHARED ${SOURCES_FILES} ${MOC_HEADERS} ${UIC_HEADERS} ${RCC_FILES})
 target_link_libraries(mdtutils ${QT_LIBRARIES})
 
-# Version statique
+# Static version of the library
 if(MDT_BUILD_STATIC_LIBS)
   add_library (mdtutils_static STATIC ${SOURCES_FILES} )
   target_link_libraries(mdtutils_static ${QT_LIBRARIES})
   set_target_properties("mdtutils_static" PROPERTIES OUTPUT_NAME "mdtutils")
 endif(MDT_BUILD_STATIC_LIBS)
 
-# Destinations
+# Headers to install
+file(GLOB INSTALL_HEADERS *.h)
+install (FILES ${INSTALL_HEADERS} DESTINATION "${HEADERS_DEST_DIR}/mdtutils")
+
+# Install targets
 install (TARGETS "mdtutils" DESTINATION "${LIB_DEST_DIR}")
 if(MDT_BUILD_STATIC_LIBS)
   install (TARGETS "mdtutils_static" DESTINATION "${LIB_DEST_DIR}")
