--- a/src/mdtutilsgui/CMakeLists.txt
+++ b/src/mdtutilsgui/CMakeLists.txt
@@ -65,6 +65,10 @@ if(MDT_BUILD_STATIC_LIBS)
   set_target_properties("mdtutilsgui_static" PROPERTIES OUTPUT_NAME "mdtutils")
 endif(MDT_BUILD_STATIC_LIBS)
 
+# Headers to install
+file(GLOB INSTALL_HEADERS *.h)
+install (FILES ${INSTALL_HEADERS} DESTINATION "${HEADERS_DEST_DIR}/mdtutilsgui")
+
 # Destinations
 install (TARGETS "mdtutilsgui" DESTINATION "${LIB_DEST_DIR}")
 if(MDT_BUILD_STATIC_LIBS)
