--- a/src/mdtutils/Makefile
+++ b/src/mdtutils/Makefile
@@ -564,6 +564,54 @@ mdtUicNumberItem.cpp.s:
 	cd /home/philippe/programmation/multiDiagTools && $(MAKE) -f src/mdtutils/CMakeFiles/mdtutils.dir/build.make src/mdtutils/CMakeFiles/mdtutils.dir/mdtUicNumberItem.cpp.s
 .PHONY : mdtUicNumberItem.cpp.s
 
+mdtUicNumberValidator.o: mdtUicNumberValidator.cpp.o
+.PHONY : mdtUicNumberValidator.o
+
+# target to build an object file
+mdtUicNumberValidator.cpp.o:
+	cd /home/philippe/programmation/multiDiagTools && $(MAKE) -f src/mdtutils/CMakeFiles/mdtutils.dir/build.make src/mdtutils/CMakeFiles/mdtutils.dir/mdtUicNumberValidator.cpp.o
+.PHONY : mdtUicNumberValidator.cpp.o
+
+mdtUicNumberValidator.i: mdtUicNumberValidator.cpp.i
+.PHONY : mdtUicNumberValidator.i
+
+# target to preprocess a source file
+mdtUicNumberValidator.cpp.i:
+	cd /home/philippe/programmation/multiDiagTools && $(MAKE) -f src/mdtutils/CMakeFiles/mdtutils.dir/build.make src/mdtutils/CMakeFiles/mdtutils.dir/mdtUicNumberValidator.cpp.i
+.PHONY : mdtUicNumberValidator.cpp.i
+
+mdtUicNumberValidator.s: mdtUicNumberValidator.cpp.s
+.PHONY : mdtUicNumberValidator.s
+
+# target to generate assembly for a file
+mdtUicNumberValidator.cpp.s:
+	cd /home/philippe/programmation/multiDiagTools && $(MAKE) -f src/mdtutils/CMakeFiles/mdtutils.dir/build.make src/mdtutils/CMakeFiles/mdtutils.dir/mdtUicNumberValidator.cpp.s
+.PHONY : mdtUicNumberValidator.cpp.s
+
+mdtUicNumberWidget.o: mdtUicNumberWidget.cpp.o
+.PHONY : mdtUicNumberWidget.o
+
+# target to build an object file
+mdtUicNumberWidget.cpp.o:
+	cd /home/philippe/programmation/multiDiagTools && $(MAKE) -f src/mdtutils/CMakeFiles/mdtutils.dir/build.make src/mdtutils/CMakeFiles/mdtutils.dir/mdtUicNumberWidget.cpp.o
+.PHONY : mdtUicNumberWidget.cpp.o
+
+mdtUicNumberWidget.i: mdtUicNumberWidget.cpp.i
+.PHONY : mdtUicNumberWidget.i
+
+# target to preprocess a source file
+mdtUicNumberWidget.cpp.i:
+	cd /home/philippe/programmation/multiDiagTools && $(MAKE) -f src/mdtutils/CMakeFiles/mdtutils.dir/build.make src/mdtutils/CMakeFiles/mdtutils.dir/mdtUicNumberWidget.cpp.i
+.PHONY : mdtUicNumberWidget.cpp.i
+
+mdtUicNumberWidget.s: mdtUicNumberWidget.cpp.s
+.PHONY : mdtUicNumberWidget.s
+
+# target to generate assembly for a file
+mdtUicNumberWidget.cpp.s:
+	cd /home/philippe/programmation/multiDiagTools && $(MAKE) -f src/mdtutils/CMakeFiles/mdtutils.dir/build.make src/mdtutils/CMakeFiles/mdtutils.dir/mdtUicNumberWidget.cpp.s
+.PHONY : mdtUicNumberWidget.cpp.s
+
 moc_mdtErrorOut.o: moc_mdtErrorOut.cxx.o
 .PHONY : moc_mdtErrorOut.o
 
@@ -587,6 +635,30 @@ moc_mdtErrorOut.s: moc_mdtErrorOut.cxx.s
 moc_mdtErrorOut.cxx.s:
 	cd /home/philippe/programmation/multiDiagTools && $(MAKE) -f src/mdtutils/CMakeFiles/mdtutils.dir/build.make src/mdtutils/CMakeFiles/mdtutils.dir/moc_mdtErrorOut.cxx.s
 .PHONY : moc_mdtErrorOut.cxx.s
+
+moc_mdtUicNumberWidget.o: moc_mdtUicNumberWidget.cxx.o
+.PHONY : moc_mdtUicNumberWidget.o
+
+# target to build an object file
+moc_mdtUicNumberWidget.cxx.o:
+	cd /home/philippe/programmation/multiDiagTools && $(MAKE) -f src/mdtutils/CMakeFiles/mdtutils.dir/build.make src/mdtutils/CMakeFiles/mdtutils.dir/moc_mdtUicNumberWidget.cxx.o
+.PHONY : moc_mdtUicNumberWidget.cxx.o
+
+moc_mdtUicNumberWidget.i: moc_mdtUicNumberWidget.cxx.i
+.PHONY : moc_mdtUicNumberWidget.i
+
+# target to preprocess a source file
+moc_mdtUicNumberWidget.cxx.i:
+	cd /home/philippe/programmation/multiDiagTools && $(MAKE) -f src/mdtutils/CMakeFiles/mdtutils.dir/build.make src/mdtutils/CMakeFiles/mdtutils.dir/moc_mdtUicNumberWidget.cxx.i
+.PHONY : moc_mdtUicNumberWidget.cxx.i
+
+moc_mdtUicNumberWidget.s: moc_mdtUicNumberWidget.cxx.s
+.PHONY : moc_mdtUicNumberWidget.s
+
+# target to generate assembly for a file
+moc_mdtUicNumberWidget.cxx.s:
+	cd /home/philippe/programmation/multiDiagTools && $(MAKE) -f src/mdtutils/CMakeFiles/mdtutils.dir/build.make src/mdtutils/CMakeFiles/mdtutils.dir/moc_mdtUicNumberWidget.cxx.s
+.PHONY : moc_mdtUicNumberWidget.cxx.s
 
 # Help Target
 help:
@@ -652,9 +724,18 @@ help:
 	@echo "... mdtUicNumberItem.o"
 	@echo "... mdtUicNumberItem.i"
 	@echo "... mdtUicNumberItem.s"
+	@echo "... mdtUicNumberValidator.o"
+	@echo "... mdtUicNumberValidator.i"
+	@echo "... mdtUicNumberValidator.s"
+	@echo "... mdtUicNumberWidget.o"
+	@echo "... mdtUicNumberWidget.i"
+	@echo "... mdtUicNumberWidget.s"
 	@echo "... moc_mdtErrorOut.o"
 	@echo "... moc_mdtErrorOut.i"
 	@echo "... moc_mdtErrorOut.s"
+	@echo "... moc_mdtUicNumberWidget.o"
+	@echo "... moc_mdtUicNumberWidget.i"
+	@echo "... moc_mdtUicNumberWidget.s"
 .PHONY : help
 
 
